<resources>
    <string name="app_name">KiemTraExe</string>
    <string name="title">QUẢN LÍ NHÂN VIÊN</string>
    <string name="ma">Mã NV:</string>
    <string name="hoten">Họ tên:</string>
    <string name="gt">Giới tính:</string>
    <string name="phong">Phòng:</string>
    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="update">Update</string>
    <string name="reset">Reset</string>
    <string name="ds">Danh sách nhân viên:</string>
    <string name="nam">Nam</string>
    <string name="nu">Nữ</string>
    <string name="kt">Kế toán</string>
    <string name="kd">Kinh doanh</string>
    <string name="ns">Nhân sự</string>
</resources>
