<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        style="@style/Tieude"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:gravity="center"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            style="@style/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ma"/>
        <EditText
            android:id="@+id/editMaNV"
            style="@style/editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            style="@style/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hoten"/>
        <EditText
            android:id="@+id/editHoTen"
            style="@style/editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:orientation="horizontal">

        <TextView
            style="@style/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gt" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rbNam"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nam"
                android:checked="true"/>

            <RadioButton
                android:id="@+id/rbNu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nu" />
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:orientation="horizontal">

        <TextView
            style="@style/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phong" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rbKT"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/kt"
                android:checked="true"/>

            <RadioButton
                android:id="@+id/rbKD"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/kd" />
            <RadioButton
                android:id="@+id/rbNS"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ns" />
        </RadioGroup>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/btnAdd"
            style="@style/pheptinh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add"/>
        <Button
            android:id="@+id/btnDelete"
            style="@style/pheptinh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete"/>
        <Button
            android:id="@+id/btnUpdate"
            style="@style/pheptinh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/update"/>
        <Button
            android:id="@+id/btnReset"
            style="@style/pheptinh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reset"/>
    </LinearLayout>

    <TextView
        style="@style/ds"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ds"/>
    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycleView1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

    </android.support.v7.widget.RecyclerView>

</LinearLayout>