<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="15dp"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/image1"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/ic_launcher_background"
        android:layout_marginLeft="15dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="15dp">

        <TextView
            android:id="@+id/tvMaNV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ma"
            android:textColor="@color/den"
            />
        <TextView
            android:id="@+id/tvHoTen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hoten"
            android:textColor="@color/den"
            android:textSize="23dp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/tvPhong"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/phong"
            android:textColor="@color/den"
            android:layout_marginLeft="15dp"/>


    </LinearLayout>

</LinearLayout>